RESOLVED FIXED 54873
Can not force XML without style information to dump as text.
https://bugs.webkit.org/show_bug.cgi?id=54873
Summary Can not force XML without style information to dump as text.
Vsevolod Vlasov
Reported 2011-02-21 04:55:51 PST
JavaScript calls to Layout Test Controller can not be used in layout tests for XML viewer (see https://bugs.webkit.org/show_bug.cgi?id=13807) because these XML documents should not have any style information.
Attachments
Patch (9.26 KB, patch)
2011-02-22 05:24 PST, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-02-22 05:24:42 PST
Pavel Feldman
Comment 2 2011-02-22 06:00:11 PST
Comment on attachment 83303 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=83303&action=review > Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp:620 > + setDumpPixels(false); No layoutTestController() prefix intentional? > Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:496 > + WKBundleFrameRef frame = WKBundlePageGetMainFrame(m_page); Why is this chance necessary?
Vsevolod Vlasov
Comment 3 2011-02-22 07:32:45 PST
Comment on attachment 83303 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=83303&action=review >> Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp:620 >> + setDumpPixels(false); > > No layoutTestController() prefix intentional? Yes, QT implementation does not support dumpPixels property of layoutTestController. >> Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:496 >> + WKBundleFrameRef frame = WKBundlePageGetMainFrame(m_page); > > Why is this chance necessary? It's the same change for Webkit2 port. In Webkit2 layoutTestController is created in injected bundle and the information about test url is not available, so I read it from frame.
WebKit Commit Bot
Comment 4 2011-02-22 21:51:30 PST
The commit-queue encountered the following flaky tests while processing attachment 83303 [details]: animations/suspend-resume-animation.html bug 48161 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2011-02-22 21:54:42 PST
Comment on attachment 83303 [details] Patch Clearing flags on attachment: 83303 Committed r79403: <http://trac.webkit.org/changeset/79403>
WebKit Commit Bot
Comment 6 2011-02-22 21:54:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.