Tools/DumpRenderTree/chromium/TestShell.cpp
@@ -173,20 +173,21 @@ void TestShell::runFileTest(const TestParams& params)
     m_params = params;
     string testUrl = m_params.testUrl.spec();
 
-    bool inspectorTestMode = testUrl.find("/inspector/") != string::npos
-        || testUrl.find("\\inspector\\") != string::npos;
-
-    m_prefs.developerExtrasEnabled =  inspectorTestMode
-        || testUrl.find("/inspector-enabled/") != string::npos
-        || testUrl.find("\\inspector-enabled\\") != string::npos;
-
+    m_prefs.developerExtrasEnabled = true;
     applyPreferences();
 
     if (testUrl.find("loading/") != string::npos
         || testUrl.find("loading\\") != string::npos)
         m_layoutTestController->setShouldDumpFrameLoadCallbacks(true);
 
-    if (inspectorTestMode)
+    if (testUrl.find("/dumpAsText/") != string::npos
+        || testUrl.find("\\dumpAsText\\") != string::npos) {
+        m_layoutTestController->setShouldDumpAsText(true);
+        m_layoutTestController->setShouldGeneratePixelResults(false);
+    }
+
+    if (testUrl.find("/inspector/") != string::npos
+        || testUrl.find("\\inspector\\") != string::npos)
         showDevTools();
 
     if (m_dumpWhenFinished)
