Tools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -763,6 +763,11 @@ static bool shouldOpenWebInspector(const char* pathOrURL)
     return strstr(pathOrURL, "/inspector/") || strstr(pathOrURL, "\\inspector\\");
 }
 
+static bool shouldDumpAsText(const char* pathOrURL)
+{
+    return strstr(pathOrURL, "/dumpAsText/") || strstr(pathOrURL, "\\dumpAsText\\");
+}
+
 static bool shouldEnableDeveloperExtras(const char* pathOrURL)
 {
     return true;
@@ -957,6 +962,10 @@ static void runTest(const string& testPathOrURL)
         gLayoutTestController->setDeveloperExtrasEnabled(true);
         if (shouldOpenWebInspector(pathOrURL.c_str()))
             gLayoutTestController->showWebInspector();
+    }
+    if (shouldDumpAsText(pathOrURL.c_str())) {
+        gLayoutTestController->setDumpAsText(true);
+        gLayoutTestController->setGeneratePixelResults(false);
     }
 
     prevTestBFItem = 0;
